[enh] cleaned notebook

--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -280,67 +280,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "size = 50\n",
-    "theta_prime = np.random.rand(size)\n",
-    "x = np.random.rand(size)\n",
-    "\n",
-    "c0 = 10\n",
-    "d0 = 3\n",
-    "e0 = 0.01\n",
-    "f0 = 0.001\n",
-    "g0 = 0.001\n",
-    "\n",
-    "t = 1\n",
-    "\n",
-    "I = np.eye(size)\n",
-    "print(theta_prime)\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "with pm.Model():\n",
-    "    s = pm.Gamma('s', d0, e0)\n",
-    "    sigma = pm.InverseGamma('sigma', f0, g0)\n",
-    "    theta = pm.MvNormal('theta', mu=0.5, cov=c0 * sigma * I)\n",
-    "\n",
-    "    # Expected value of outcome\n",
-    "    mu = theta_prime.dot(x) * (1 - np.exp(-t/s))\n",
-    "\n",
-    "    # Likelihood (sampling distribution) of observations\n",
-    "    rating = pm.Normal('rating', mu=mu, sd=sigma, observed=theta_prime)\n",
-    "    \n",
-    "    step = pm.Metropolis()\n",
-    "    trace = pm.sample(1000, step=step)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pm.summary(trace)\n",
-    "pm.traceplot(trace)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,36 +304,24 @@
     "def bayes_UCB(user_features, movies, epoch, s):\n",
     "    I = np.eye(user_features.size)\n",
     "    ratings = np.zeros(movies.shape[0])\n",
-    "    for i, (title, movie) in tqdm(enumerate(movies.iterrows())): \n",
-    "        movies_features = get_movie_features(movies)\n",
-    "        with pm.Model():\n",
-    "            s = pm.Gamma('s', d0, e0)\n",
-    "            sigma = pm.InverseGamma('sigma', f0, g0)\n",
-    "            theta = pm.MvNormal('theta', mu=0.5, cov=c0 * sigma * I)\n",
+    "    with pm.Model():\n",
+    "        s = pm.Gamma('s', d0, e0)\n",
+    "        sigma = pm.InverseGamma('sigma', f0, g0)\n",
+    "        theta = pm.MvNormal('theta', mu=0.5, cov=c0 * sigma * I)\n",
+    "        rating = pm.Normal('rating', mu=0, sd=sigma, observed=user_features)\n",
     "\n",
+    "        for i, (title, movie) in tqdm(enumerate(movies.iterrows())): \n",
+    "            movies_features = get_movie_features(movies)\n",
     "            # Expected value of outcome\n",
     "            mu = user_features.dot(movies_features) * (1 - np.exp(-epoch/s))\n",
-    "\n",
     "            # Likelihood (sampling distribution) of observations\n",
-    "            rating = pm.Normal('rating', mu=mu, sd=sigma, observed=user_features)\n",
-    "\n",
+    "            rating.mu = mu\n",
+    "            \n",
     "            step = pm.Metropolis()\n",
     "            trace = pm.sample(1000, step=step, njobs=1, progressbar=False)\n",
-    "        ratings[i] = rating.distribution.random()[0]\n",
+    "            ratings[i] = rating.distribution.random()[0]\n",
     "    return movies[movies.index == movies.index[ratings.argmax()]]\n",
-    "        \n",
-    "#regret_bayes_ucb = reinforcement_learning(user, movies_user, bayes_UCB, N=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(regret_random, regret_greedy, regret_bayes_ucb)"
+    "        "
    ]
   },
   {
