[add] new try at bayesian inference

--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -301,38 +301,51 @@
     "f0 = 0.001\n",
     "g0 = 0.001\n",
     "\n",
-    "def bayes_UCB(user_features, movies, epoch, s):\n",
-    "    I = np.eye(user_features.size)\n",
-    "    ratings = np.zeros(movies.shape[0])\n",
+    "def bayes_inference(Dl, x):\n",
+    "    N = x.size - 1\n",
+    "    I = np.eye(N)\n",
     "    with pm.Model():\n",
-    "        s = pm.Gamma('s', d0, e0)\n",
     "        sigma = pm.InverseGamma('sigma', f0, g0)\n",
-    "        theta = pm.MvNormal('theta', mu=0.5, cov=c0 * sigma * I)\n",
-    "        rating = pm.Normal('rating', mu=0, sd=sigma, observed=user_features)\n",
+    "        # distribution of user features content\n",
+    "        theta = pm.MvNormal('theta', mu=0.5, cov=c0 * sigma * I, shape=(N,))\n",
+    "        # distribution of user recovery rate\n",
+    "        s = pm.Gamma('s', d0, e0)\n",
+    "        \n",
+    "        mu = theta.dot(x[:N]) * (1 - np.exp(-x[N]/s))\n",
     "\n",
-    "        for i, (title, movie) in tqdm(enumerate(movies.iterrows())): \n",
-    "            movies_features = get_movie_features(movies)\n",
-    "            # Expected value of outcome\n",
-    "            mu = user_features.dot(movies_features) * (1 - np.exp(-epoch/s))\n",
-    "            # Likelihood (sampling distribution) of observations\n",
-    "            rating.mu = mu\n",
-    "            \n",
-    "            step = pm.Metropolis()\n",
-    "            trace = pm.sample(1000, step=step, njobs=1, progressbar=False)\n",
-    "            ratings[i] = rating.distribution.random()[0]\n",
-    "    return movies[movies.index == movies.index[ratings.argmax()]]\n",
-    "        "
+    "        rating = pm.Normal('rating', mu=mu, sd=sigma, observed=Dl)\n",
+    "\n",
+    "        step = pm.Metropolis()\n",
+    "        trace = pm.sample(1000, step=step, njobs=1)\n",
+    "    \n",
+    "    res = random.choice(rating.tag.test_value)\n",
+    "    features = res[:N]\n",
+    "    recovery = res[N]\n",
+    "    rating = res[N+1]\n",
+    "    return rating\n",
+    "\n",
+    "def UCB_choice(user, movies, epoch, s):\n",
+    "    Dl = movies_user[movies.columns.difference([\"votes\", \"rating\"])]\n",
+    "    Dl['t'] = [i for i in range(Dl.shape[0])]\n",
+    "    Dl['rating'] = user.rating\n",
+    "    Dl = Dl[Dl.index.isin(Dl.index[:epoch])]\n",
+    "    ratings = np.zeros(movies.shape[0])\n",
+    "    for i, (title, movie) in enumerate(movies.iterrows()):\n",
+    "        x = get_movie_features(movie).append(pd.Series([epoch]))\n",
+    "        ratings[i] = bayes_inference(Dl, x)\n",
+    "    return movies[movies.index == movies.index[ratings.argmax()]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "res = rl_multiple_users(users, movies, [greedy_choice, bayes_UCB], N=1, N_USER=1)"
+    "%time UCB_choice(user, movies_user, 5, 1)"
    ]
   },
   {
