[add] got bad but coherent results with bayes ucb

--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -143,10 +143,13 @@
     "def reinforcement_learning(user, moviestc, choicef = greedy_choice, s=0.5, N=20):\n",
     "    user_features = np.zeros(moviestc.shape[1] - 2)\n",
     "    movies = moviestc.copy()\n",
-    "    regret = 0\n",
+    "    movies = movies[movies.columns.difference([\"votes\", \"rating\"])]\n",
     "    movies.insert(0, 'last_t', np.ones(movies.shape[0]).astype(np.int64))\n",
+    "    movies.insert(0, 't', [i for i in range(movies.shape[0])])\n",
+    "    movies.insert(0, 'rating', user.rating)\n",
+    "    regret = 0\n",
     "    for t in range(N):\n",
-    "        recommandation = choicef(user_features, movies, t, s)\n",
+    "        recommandation = choicef(user_features, movies, t+1, s)\n",
     "        recommandation_features = get_movie_features(recommandation)\n",
     "        user_rating = user.get_value(recommandation.index[0], \"rating\")\n",
     "        user_features = update_features(user_features, recommandation_features, user_rating, t)\n",
@@ -316,8 +319,8 @@
     "        rating = pm.Normal('rating', mu=mu, sd=sigma, observed=Dl)\n",
     "\n",
     "        step = pm.Metropolis()\n",
-    "        trace = pm.sample(1000, step=step, njobs=1)\n",
-    "    \n",
+    "        trace = pm.sample(1000, step=step, njobs=1, progressbar=True)\n",
+    "\n",
     "    res = random.choice(rating.tag.test_value)\n",
     "    features = res[:N]\n",
     "    recovery = res[N]\n",
@@ -325,13 +328,9 @@
     "    return rating\n",
     "\n",
     "def UCB_choice(user, movies, epoch, s):\n",
-    "    Dl = movies_user[movies.columns.difference([\"votes\", \"rating\"])]\n",
-    "    Dl['t'] = [i for i in range(Dl.shape[0])]\n",
-    "    Dl['rating'] = user.rating\n",
-    "    Dl = Dl[Dl.index.isin(Dl.index[:epoch])]\n",
+    "    Dl = movies[movies.index.isin(movies.index[:epoch])]\n",
     "    ratings = np.zeros(movies.shape[0])\n",
     "    for i, (title, movie) in enumerate(movies.iterrows()):\n",
-    "        x = get_movie_features(movie).append(pd.Series([epoch]))\n",
     "        ratings[i] = bayes_inference(Dl, x)\n",
     "    return movies[movies.index == movies.index[ratings.argmax()]]"
    ]
@@ -345,27 +344,26 @@
    },
    "outputs": [],
    "source": [
-    "%time UCB_choice(user, movies_user, 5, 1)"
+    "#%time UCB_choice(user, movies_user, 5, 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "res"
+    "%time rl_multiple_users(users, movies, [random_choice, greedy_choice, UCB_choice], N=1, N_USER=1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": []
   }
  ],
