[add] "working" bayes ucb

--- a/src/Second attempt at learning.ipynb
+++ b/src/Second attempt at learning.ipynb
@@ -17,9 +17,9 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import plotly\n",
+    "import plotly.offline as plt\n",
     "import plotly.graph_objs as go\n",
-    "plotly.offline.init_notebook_mode()\n",
+    "plt.init_notebook_mode()\n",
     "import os\n",
     "import random\n",
     "import math\n",
@@ -140,7 +140,7 @@
     "    \"\"\" update the user preferen \"\"\"\n",
     "    return iterative_mean(user_features, movie_features * rating, t+1)\n",
     "\n",
-    "def reinforcement_learning(user, moviestc, choicef = greedy_choice, s=0.5, N=20):\n",
+    "def reinforcement_learning(user, moviestc, choicef = greedy_choice, s=200, N=20):\n",
     "    user_features = np.zeros(moviestc.shape[1] - 2)\n",
     "    movies = moviestc.copy()\n",
     "    movies = movies[movies.columns.difference([\"votes\", \"rating\"])]\n",
@@ -236,18 +236,18 @@
     "def wrapper_rl_one_user(args):\n",
     "    return reinforcement_learning(*args)\n",
     "\n",
-    "def rl_multiple_users(users, movies, algorithms=[greedy_choice, random_choice], s=1, N=20, N_USER=50):\n",
-    "    regrets = []        \n",
+    "def rl_multiple_users(users, movies, algorithms=[greedy_choice, random_choice], s=200, N=20, N_USER=50):\n",
+    "    regrets = []\n",
+    "    users_sample = users[users.user.isin(pd.Series(users.user.unique()).sample(N_USER))].copy()\n",
+    "    print(users_sample.shape)\n",
+    "    movies_sample = movies[movies.index.isin(users_sample.index.unique())].copy()\n",
     "    for algo in algorithms:\n",
     "        regret_algo = []\n",
     "        args = []\n",
-    "        for i in range(N_USER):\n",
-    "            user = users[users.user.isin(users.user.sample())]\n",
-    "            movies_user = movies[movies.index.isin(user.index)]\n",
-    "            choicef = algo\n",
-    "            args.append([user, movies_user, choicef, s, N])\n",
-    "        with Pool(cpu_count()) as p:\n",
-    "            regret_algo = p.map(wrapper_rl_one_user, args)\n",
+    "        for i, name in enumerate(users_sample.user.unique()):\n",
+    "            user = users[users.user == name]\n",
+    "            movies_user = movies_sample[movies_sample.index.isin(user.index)]\n",
+    "            regret_algo.append(reinforcement_learning(user, movies_user, algo, s, N))\n",
     "        regrets.append(regret_algo)\n",
     "    regrets = [sum(regret)/len(regret) for regret in regrets]\n",
     "    return regrets"
@@ -257,7 +257,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -307,6 +308,8 @@
     "def bayes_inference(Dl, x):\n",
     "    N = x.size - 1\n",
     "    I = np.eye(N)\n",
+    "    features = x[:N]\n",
+    "    epoch = x[N]\n",
     "    with pm.Model():\n",
     "        sigma = pm.InverseGamma('sigma', f0, g0)\n",
     "        # distribution of user features content\n",
@@ -314,24 +317,22 @@
     "        # distribution of user recovery rate\n",
     "        s = pm.Gamma('s', d0, e0)\n",
     "        \n",
-    "        mu = theta.dot(x[:N]) * (1 - np.exp(-x[N]/s))\n",
+    "        mu = theta.dot(features) * (1 - np.exp(-epoch/s))\n",
     "\n",
     "        rating = pm.Normal('rating', mu=mu, sd=sigma, observed=Dl)\n",
     "\n",
     "        step = pm.Metropolis()\n",
-    "        trace = pm.sample(1000, step=step, njobs=1, progressbar=True)\n",
+    "        trace = pm.sample(1000, step=step, progressbar=False)\n",
     "\n",
-    "    res = random.choice(rating.tag.test_value)\n",
-    "    features = res[:N]\n",
-    "    recovery = res[N]\n",
-    "    rating = res[N+1]\n",
-    "    return rating\n",
+    "    rating_distribution = [compute_utility(trace.theta[i], features, epoch, trace.s[i]) for i in range(len(trace.theta))]\n",
+    "    #plt.plot([go.Histogram(x=rating_distribution)])\n",
+    "    return random.choice(rating_distribution)\n",
     "\n",
     "def UCB_choice(user, movies, epoch, s):\n",
     "    Dl = movies[movies.index.isin(movies.index[:epoch])]\n",
     "    ratings = np.zeros(movies.shape[0])\n",
     "    for i, (title, movie) in enumerate(movies.iterrows()):\n",
-    "        ratings[i] = bayes_inference(Dl, x)\n",
+    "        ratings[i] = bayes_inference(Dl, movie)\n",
     "    return movies[movies.index == movies.index[ratings.argmax()]]"
    ]
   },
@@ -356,7 +357,7 @@
    },
    "outputs": [],
    "source": [
-    "%time rl_multiple_users(users, movies, [random_choice, greedy_choice, UCB_choice], N=1, N_USER=1)"
+    "%time rl_multiple_users(users, movies, [random_choice, greedy_choice, UCB_choice], N=10, N_USER=4)"
    ]
   },
   {
