--- a/src/Third attempt at learning.ipynb
+++ b/src/Third attempt at learning.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -31,8 +31,17 @@
     "import theano\n",
     "theano.config.compute_test_value = 'raise'\n",
     "%matplotlib inline\n",
-    "from multiprocessing import Pool, cpu_count\n",
-    "\n",
+    "from multiprocessing import Pool, cpu_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "SELECTED_DATA_DIR = \"../selected-data/\"\n",
     "MOVIES_FILE = \"best_movie_ratings_features_engineered.csv\"\n",
     "USERS_FILE = \"users_ratings.csv\""
@@ -269,8 +278,6 @@
     "        \n",
     "def iterative_mean(old, new, t):\n",
     "    \"\"\" Compute the new mean \"\"\"\n",
-    "    #print(old)\n",
-    "    #print(new)\n",
     "    return ((t-1) / t) * old + (1/t) * new\n",
     "    \n",
     "def update_features(user_features, movie_features, rating, t):\n",
@@ -300,15 +307,18 @@
    },
    "outputs": [],
    "source": [
-    "def reinforcement_learning(user, moviestc, choicef, s, numberSimulation):\n",
+    "def reinforcement_learning(user, moviestc, choicef = greedy_choice, s, numberSimulation):\n",
     "    if s<200:\n",
     "        print(\"WARNING : s is really small, movies will get often repeated\")\n",
     "    user_features = np.zeros(moviestc.shape[1] - 2)\n",
     "    movies = moviestc.copy()\n",
-    "    cumregret = [0]\n",
+    "    movies = movies[movies.columns.difference([\"votes\", \"rating\"])]\n",
     "    movies.insert(0, 'last_t', np.ones(movies.shape[0]).astype(np.int64))\n",
+    "    movies.insert(0, 't', [i for i in range(movies.shape[0])])\n",
+    "    movies.insert(0, 'rating', user.rating)\n",
+    "    cumregret = [0]\n",
     "    for t in range(numberSimulation):\n",
-    "        recommandation = choicef(user_features, movies, t, s)\n",
+    "        recommandation = choicef(user_features, movies, t+1, s)\n",
     "        recommandation_features = get_movie_features(recommandation)\n",
     "        user_rating = user.get_value(recommandation.index[0], \"rating\")\n",
     "        user_features = update_features(user_features, recommandation_features, user_rating, t)\n",
@@ -336,19 +346,18 @@
     "def rl_multiple_users(users, movies, algorithms=[greedy_choice, random_choice], s=1, N=20, N_USER=50):\n",
     "    def wrapper_rl_one_user(args):\n",
     "        return reinforcement_learning(*args)\n",
-    "    regrets = []        \n",
+    "    regrets = []\n",
+    "    users_sample = users[users.user.isin(pd.Series(users.user.unique()).sample(N_USER))].copy()\n",
+    "    print(users_sample.shape)\n",
+    "    movies_sample = movies[movies.index.isin(users_sample.index.unique())].copy()\n",
     "    for algo in algorithms:\n",
     "        regret_algo = []\n",
     "        args = []\n",
-    "        for i in range(N_USER):\n",
-    "            user = users[users.user.isin(users.user.sample())]\n",
-    "            movies_user = movies[movies.index.isin(user.index)]\n",
-    "            choicef = algo\n",
-    "            args.append([user, movies_user, choicef, s, N])\n",
-    "        with Pool(cpu_count()) as p:\n",
-    "            regret_algo = p.map(wrapper_rl_one_user, args)\n",
+    "        for i, name in enumerate(users_sample.user.unique()):\n",
+    "            user = users[users.user == name]\n",
+    "            movies_user = movies_sample[movies_sample.index.isin(user.index)]\n",
+    "            regret_algo.append(reinforcement_learning(user, movies_user, algo, s, N))\n",
     "        regrets.append(regret_algo)\n",
-    "    regrets = [sum(regret)/len(regret) for regret in regrets]\n",
     "    return regrets"
    ]
   },
