up third attempt

--- a/src/Third attempt at learning.ipynb
+++ b/src/Third attempt at learning.ipynb
@@ -317,6 +317,9 @@
     "    movies.insert(0, 't', [i for i in range(movies.shape[0])])\n",
     "    movies.insert(0, 'rating', user.rating)\n",
     "    cumregret = [0]\n",
+    "    accuracy_rmse = [0]\n",
+    "    avg_rating = [0]\n",
+    "    timestamp = [0]\n",
     "    for t in range(numberSimulation):\n",
     "        recommandation = choicef(user_features, movies, t+1, s)\n",
     "        recommandation_features = get_movie_features(recommandation)\n",
@@ -324,8 +327,10 @@
     "        user_features = update_features(user_features, recommandation_features, user_rating, t)\n",
     "        utility = compute_utility(user_features, recommandation_features, t, s)\n",
     "        cumregret.append(cumregret[-1] + (user_rating - utility ))\n",
+    "        accuracy_rmse.append((user_rating - utility )**2 )\n",
+    "        avg_rating.append(user_rating)\n",
     "        movies.loc[movies.index.isin(recommandation.index),'last_t'] = t\n",
-    "    return cumregret"
+    "    return {'cumregret': cumregret, 'accuracy_rmse':accuracy_rmse, 'avg_rating':avg_rating}"
    ]
   },
   {
@@ -356,6 +361,7 @@
     "        for i, name in enumerate(users_sample.user.unique()):\n",
     "            user = users[users.user == name]\n",
     "            movies_user = movies_sample[movies_sample.index.isin(user.index)]\n",
+    "            res = reinforcement_learning(user, movies_user, algo, s, N)\n",
     "            regret_algo.append(reinforcement_learning(user, movies_user, algo, s, N))\n",
     "        regrets.append(regret_algo)\n",
     "    return regrets"
