[add] greedy UCB

--- a/src/Third attempt at learning.ipynb
+++ b/src/Third attempt at learning.ipynb
@@ -32,7 +32,8 @@
     "import datetime\n",
     "theano.config.compute_test_value = 'raise'\n",
     "%matplotlib inline\n",
-    "from multiprocessing import Pool, cpu_count"
+    "from multiprocessing import Pool, cpu_count\n",
+    "from functools import partial"
    ]
   },
   {
@@ -253,24 +254,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "def greedy_choice(user_features, movies, epoch, s):\n",
+    "    return greedy_choice_t(user_features, movies, epoch, s, best_contentbased_recommandation)\n",
+    "\n",
+    "def greedy_choice_t(user_features, movies, epoch, s, recommf=best_contentbased_recommandation):\n",
     "    \"\"\" greedy approach to the problem \"\"\"\n",
     "    epsilon = 1 / math.sqrt(epoch+1)\n",
+    "    return greedy_choice_no_t(user_features, movies, epoch, s, recommf, epsilon)\n",
+    "\n",
+    "def greedy_choice_no_t(user_features, movies, epoch, s, recommf=best_contentbased_recommandation, epsilon=0.3):\n",
+    "    \"\"\" greedy approach to the problem \"\"\"\n",
     "    if random.random() > epsilon: # choose the best\n",
     "        return best_contentbased_recommandation(user_features, movies, epoch, s)\n",
     "    else:\n",
     "        return movies.sample()\n",
-    "\n",
-    "def greedy_choice_no_t(user_features, movies, epoch, s, epsilon=0.3 ):\n",
-    "    \"\"\" greedy approach to the problem \"\"\"\n",
-    "    if random.random() > epsilon: # choose the best\n",
-    "        return best_contentbased_recommandation(user_features, movies, epoch, s)\n",
-    "    else:\n",
-    "        return movies.sample()"
+    "    \n",
+    "def greedy_choice_UCB(user_features, movies, epoch, s):\n",
+    "    \"\"\" greedy approach with upper confidence bounds \"\"\"\n",
+    "    return greedy_choice_t(user_features, movies, epoch, s, partial(best_contentbased_recommandation, UCB=True))\n",
+    "    "
    ]
   },
   {
@@ -330,6 +336,9 @@
     "    res = user_features.dot(movie_features) * (1 - math.exp(-epoch/s))\n",
     "    return res\n",
     "\n",
+    "def compute_UCB(epoch, Nt):\n",
+    "    return math.sqrt((2 * math.log(epoch)) / Nt)\n",
+    "\n",
     "def get_movie_features(movie):\n",
     "    \"\"\" selected features from dataframe \"\"\"\n",
     "    if isinstance(movie, pd.Series):\n",
@@ -339,12 +348,14 @@
     "    else:\n",
     "        raise TypeError(\"{} should be a Series or DataFrame\".format(movie))\n",
     "    \n",
-    "def best_contentbased_recommandation(user_features, movies, epoch, s):\n",
+    "def best_contentbased_recommandation(user_features, movies, epoch, s, UCB=False):\n",
     "    \"\"\" Return the movie with the highest utility \"\"\"\n",
     "    utilities = np.zeros(movies.shape[0])\n",
     "    for i, (title, movie) in enumerate(movies.iterrows()):\n",
     "        movie_features = get_movie_features(movie)\n",
     "        utilities[i] = compute_utility(user_features, movie_features, epoch - movie.last_t, s)\n",
+    "        if UCB:\n",
+    "            utilities[i] += compute_UCB(epoch, movie.Nt)\n",
     "    return movies[movies.index == movies.index[utilities.argmax()]]\n",
     "\n",
     "def best_collaborative_recommandation(user_features, movies, epoch, s):\n",
@@ -397,6 +408,7 @@
     "    movies.insert(0, 'last_t', np.ones(movies.shape[0]).astype(np.int64))\n",
     "    movies.insert(0, 't', [i for i in range(movies.shape[0])])\n",
     "    movies.insert(0, 'rating', user.rating)\n",
+    "    movies.insert(0, 'Nt', np.zeros(movies.shape[0]))\n",
     "    cumregret = [0]\n",
     "    accuracy_rmse = [0]\n",
     "    avg_rating = [0]\n",
@@ -412,6 +424,7 @@
     "        accuracy_rmse.append((user_rating - utility )**2 )\n",
     "        avg_rating.append(user_rating)\n",
     "        movies.loc[movies.index.isin(recommandation.index),'last_t'] = t\n",
+    "        movies.loc[movies.index.isin(recommandation.index),'Nt'] += 1\n",
     "        timestamp.append((datetime.datetime.now() - now).total_seconds())\n",
     "    return {'cumregret': cumregret, 'accuracy_rmse':accuracy_rmse, 'avg_rating':avg_rating, 'timediff':timestamp}"
    ]
@@ -473,8 +486,8 @@
    "outputs": [],
    "source": [
     "# Keep list consistent\n",
-    "ALGOS      = [greedy_choice_no_t, greedy_choice, random_choice]\n",
-    "ALGOS_NAME = ['greedy_choice_no_t', 'greedy_choice', 'random_choice']\n",
+    "ALGOS      = [greedy_choice_no_t, greedy_choice, random_choice, greedy_choice_UCB]\n",
+    "ALGOS_NAME = ['greedy_choice_no_t', 'greedy_choice', 'random_choice', 'greedy_choice_UCB']\n",
     "assert(len(ALGOS) == len(ALGOS_NAME))"
    ]
   },
