[enh] higher order programming BITCHES

--- a/src/Third attempt at learning.ipynb
+++ b/src/Third attempt at learning.ipynb
@@ -269,25 +269,29 @@
    },
    "outputs": [],
    "source": [
-    "def greedy_choice_contentbased(user_features, movies, epoch, s):\n",
-    "    \"\"\" greedy approach to the problem \"\"\"\n",
+    "def greedy_choice_t(user_features, movies, epoch, s, recommf):\n",
+    "    \"\"\" greedy with decreasing epsilon \"\"\"\n",
     "    epsilon = 1 / math.sqrt(epoch+1)\n",
-    "    return greedy_choice_no_t(user_features, movies, epoch, s, epsilon)\n",
+    "    return greedy_choice_no_t(user_features, movies, epoch, s, recommf, epsilon)\n",
     "\n",
-    "def greedy_choice_no_t_contentbased(user_features, movies, epoch, s, epsilon=0.3 ):\n",
-    "    \"\"\" greedy approach to the problem \"\"\"\n",
-    "    if random.random() > epsilon: # choose the best\n",
-    "        return best_contentbased_recommandation(user_features, movies, epoch, s) # best_contentbased_recommandation(user_features, movies, epoch, s)\n",
+    "def greedy_choice_no_t(user_features, movies, epoch, s, recommf, epsilon):\n",
+    "    \"\"\" greedy with fixed epsilon \"\"\"\n",
+    "    if random.random() > epsilon:\n",
+    "        return recommf(user_features, movies, epoch, s)\n",
     "    else:\n",
     "        return movies.sample()\n",
+    "\n",
+    "def greedy_choice_contentbased(user_features, movies, epoch, s):\n",
+    "    \"\"\" greedy approach to the problem \"\"\"\n",
+    "    return greedy_choice_t(user_features, movies, epoch, s, best_contentbased_recommandation)\n",
+    "\n",
+    "def greedy_choice_no_t_contentbased(user_features, movies, epoch, s, epsilon=0.3):\n",
+    "    \"\"\" greedy approach to the problem \"\"\"\n",
+    "    return greedy_choice_no_t(user_features, movies, epoch, s, best_contentbased_recommandation, epsilon)\n",
     "    \n",
     "def greedy_choice_UCB(user_features, movies, epoch, s):\n",
     "    \"\"\" greedy approach with upper confidence bounds \"\"\"\n",
-    "    epsilon = 1 / math.sqrt(epoch+1)\n",
-    "    if random.random() > epsilon: # choose the best\n",
-    "        return best_contentbased_recommandation(user_features, movies, epoch, s, True) # best_contentbased_recommandation(user_features, movies, epoch, s)\n",
-    "    else:\n",
-    "        return movies.sample()\n",
+    "    return greedy_choice_t(user_features, movies, epoch, s, partial(best_contentbased_recommandation, UCB=True))\n",
     "    "
    ]
   },
@@ -301,18 +305,11 @@
    "source": [
     "def greedy_choice_collaborative(user_features, movies, epoch, s):\n",
     "    \"\"\" greedy approach to the problem \"\"\"\n",
-    "    epsilon = 1 / math.sqrt(epoch+1)\n",
-    "    if random.random() > epsilon: # choose the best\n",
-    "        return best_collaborative_recommandation(user_features, movies, epoch, s)\n",
-    "    else:\n",
-    "        return movies.sample()\n",
+    "    return greedy_choice_t(user_features, movies, epoch, s, best_collaborative_recommandation)\n",
     "\n",
-    "def greedy_choice_no_t_collaborative(user_features, movies, epoch, s, epsilon=0.3 ):\n",
+    "def greedy_choice_no_t_collaborative(user_features, movies, epoch, s, epsilon=0.3):\n",
     "    \"\"\" greedy approach to the problem \"\"\"\n",
-    "    if random.random() > epsilon: # choose the best\n",
-    "        return best_collaborative_recommandation(user_features, movies, epoch, s) # best_contentbased_recommandation(user_features, movies, epoch, s)\n",
-    "    else:\n",
-    "        return movies.sample()"
+    "    return greedy_choice_no_t(user_features, movies, epoch, s, best_collaborative_recommandation, epsilon)"
    ]
   },
   {
@@ -525,7 +522,6 @@
     "        return reinforcement_learning(*args)\n",
     "    results_all = []\n",
     "    users_sample = users[users.user.isin(pd.Series(users.user.unique()).sample(N_USER))].copy()\n",
-    "    print(users_sample.shape)\n",
     "    movies_sample = movies[movies.index.isin(users_sample.index.unique())].copy()\n",
     "    for algo in algorithms:\n",
     "        res_algo = []\n",
@@ -563,7 +559,7 @@
    "source": [
     "# Keep list consistent\n",
     "ALGOS      = [greedy_choice_no_t_contentbased, greedy_choice_no_t_collaborative, random_choice, greedy_choice_UCB] #, greedy_choice, random_choice]\n",
-    "ALGOS_NAME = ['greedy_choice_no_t_collaborative','greedy_choice_no_t_contentbased', 'random_choice', 'greedy_choice_UCB'] #, 'greedy_choice', 'random_choice']\n",
+    "ALGOS_NAME = ['greedy_choice_no_t_contentbased', 'greedy_choice_no_t_collaborative', 'random_choice', 'greedy_choice_UCB'] #, 'greedy_choice', 'random_choice']\n",
     "assert(len(ALGOS) == len(ALGOS_NAME))"
    ]
   },
@@ -590,7 +586,7 @@
    },
    "outputs": [],
    "source": [
-    "%time res = rl_multiple_users(users, movies, ALGOS, N=500, N_USER=3, s=200)"
+    "%time res = rl_multiple_users(users, movies, ALGOS, N=500, N_USER=1, s=200)"
    ]
   },
   {
