[enh] more encapsulation in algorithms so we can add different ones like linUCB

--- a/src/Third attempt at learning.ipynb
+++ b/src/Third attempt at learning.ipynb
@@ -256,9 +256,16 @@
    },
    "outputs": [],
    "source": [
-    "def random_choice(user_features, movies, epoch, s):\n",
-    "    \"\"\" random approach to the problem, always exploring\"\"\"\n",
-    "    return movies.sample()"
+    "class algorithm:\n",
+    "    def update_features(self, user_features, movie_features, rating, t):\n",
+    "        return update_features(user_features, movie_features, rating, t)\n",
+    "    def compute_utility(self, user_features, movie_features, epoch, s):\n",
+    "        return compute_utility(user_features, movie_features, epoch, s)\n",
+    "    \n",
+    "class random_choice(algorithm):\n",
+    "    def choice(self, user_features, movies, epoch, s):\n",
+    "        \"\"\" random approach to the problem, always exploring\"\"\"\n",
+    "        return movies.sample()"
    ]
   },
   {
@@ -280,18 +287,21 @@
     "        return recommf(user_features, movies, epoch, s)\n",
     "    else:\n",
     "        return movies.sample()\n",
-    "\n",
-    "def greedy_choice_contentbased(user_features, movies, epoch, s):\n",
-    "    \"\"\" greedy approach to the problem \"\"\"\n",
-    "    return greedy_choice_t(user_features, movies, epoch, s, best_contentbased_recommandation)\n",
-    "\n",
-    "def greedy_choice_no_t_contentbased(user_features, movies, epoch, s, epsilon=0.3):\n",
-    "    \"\"\" greedy approach to the problem \"\"\"\n",
-    "    return greedy_choice_no_t(user_features, movies, epoch, s, best_contentbased_recommandation, epsilon)\n",
     "    \n",
-    "def greedy_choice_UCB(user_features, movies, epoch, s):\n",
-    "    \"\"\" greedy approach with upper confidence bounds \"\"\"\n",
-    "    return greedy_choice_t(user_features, movies, epoch, s, partial(best_contentbased_recommandation, UCB=True))\n",
+    "class greedy_choice_contentbased(algorithm):\n",
+    "    def choice(self, user_features, movies, epoch, s):\n",
+    "        \"\"\" greedy approach to the problem \"\"\"\n",
+    "        return greedy_choice_t(user_features, movies, epoch, s, best_contentbased_recommandation)\n",
+    "\n",
+    "class greedy_choice_no_t_contentbased(algorithm):\n",
+    "    def choice(self, user_features, movies, epoch, s, epsilon=0.3):\n",
+    "        \"\"\" greedy approach to the problem \"\"\"\n",
+    "        return greedy_choice_no_t(user_features, movies, epoch, s, best_contentbased_recommandation, epsilon)\n",
+    "    \n",
+    "class greedy_choice_UCB(algorithm):\n",
+    "    def choice(self, user_features, movies, epoch, s):\n",
+    "        \"\"\" greedy approach with upper confidence bounds \"\"\"\n",
+    "        return greedy_choice_t(user_features, movies, epoch, s, partial(best_contentbased_recommandation, UCB=True))\n",
     "    "
    ]
   },
@@ -303,13 +313,15 @@
    },
    "outputs": [],
    "source": [
-    "def greedy_choice_collaborative(user_features, movies, epoch, s):\n",
-    "    \"\"\" greedy approach to the problem \"\"\"\n",
-    "    return greedy_choice_t(user_features, movies, epoch, s, best_collaborative_recommandation)\n",
+    "class greedy_choice_collaborative(algorithm):\n",
+    "    def choice(self, user_features, movies, epoch, s):\n",
+    "        \"\"\" greedy approach to the problem \"\"\"\n",
+    "        return greedy_choice_t(user_features, movies, epoch, s, best_collaborative_recommandation)\n",
     "\n",
-    "def greedy_choice_no_t_collaborative(user_features, movies, epoch, s, epsilon=0.3):\n",
-    "    \"\"\" greedy approach to the problem \"\"\"\n",
-    "    return greedy_choice_no_t(user_features, movies, epoch, s, best_collaborative_recommandation, epsilon)"
+    "class greedy_choice_no_t_collaborative(algorithm):\n",
+    "    def choice(self, user_features, movies, epoch, s, epsilon=0.3):\n",
+    "        \"\"\" greedy approach to the problem \"\"\"\n",
+    "        return greedy_choice_no_t(user_features, movies, epoch, s, best_collaborative_recommandation, epsilon)"
    ]
   },
   {
@@ -525,7 +537,7 @@
    },
    "outputs": [],
    "source": [
-    "def reinforcement_learning(user, moviestc, choicef, s, numberSimulation):\n",
+    "def reinforcement_learning(user, moviestc, algorithm, s, numberSimulation):\n",
     "    if s<200:\n",
     "        print(\"WARNING : s is really small, movies will get often repeated\")\n",
     "    user_features = np.zeros(moviestc.shape[1] - 2)\n",
@@ -541,11 +553,11 @@
     "    timestamp = []\n",
     "    for t in range(numberSimulation):\n",
     "        now = datetime.datetime.now()\n",
-    "        recommandation = choicef(user_features, movies, t+1, s)\n",
+    "        recommandation = algorithm.choice(user_features, movies, t+1, s)\n",
     "        recommandation_features = get_movie_features(recommandation)\n",
     "        user_rating = user.loc[recommandation.index[0]].rating\n",
-    "        user_features = update_features(user_features, recommandation_features, user_rating, t)\n",
-    "        utility = compute_utility(user_features, recommandation_features, t, s)\n",
+    "        user_features = algorithm.update_features(user_features, recommandation_features, user_rating, t)\n",
+    "        utility = algorithm.compute_utility(user_features, recommandation_features, t, s)\n",
     "        cumregret.append(cumregret[-1] + (user_rating - utility ))\n",
     "        accuracy_rmse.append((user_rating - utility )**2 )\n",
     "        avg_rating.append(user_rating)\n",
@@ -611,7 +623,7 @@
    "outputs": [],
    "source": [
     "# Keep list consistent\n",
-    "ALGOS      = [greedy_choice_no_t_collaborative, greedy_choice_no_t_contentbased, random_choice, greedy_choice_UCB] #, greedy_choice, random_choice]\n",
+    "ALGOS      = [greedy_choice_no_t_collaborative(), greedy_choice_no_t_contentbased(), random_choice(), greedy_choice_UCB()] #, greedy_choice, random_choice]\n",
     "ALGOS_NAME = ['greedy_choice_no_t_collaborative', 'greedy_choice_no_t_contentbased', 'random_choice', 'greedy_choice_UCB'] #, 'greedy_choice', 'random_choice']\n",
     "assert(len(ALGOS) == len(ALGOS_NAME))"
    ]
@@ -639,7 +651,7 @@
    },
    "outputs": [],
    "source": [
-    "%time res = rl_multiple_users(users, movies, ALGOS, N=500, N_USER=10, s=200)"
+    "%time res = rl_multiple_users(users, movies, ALGOS, N=500, N_USER=1, s=200)"
    ]
   },
   {
