[add] first draft of linUCB

--- a/src/Third attempt at learning.ipynb
+++ b/src/Third attempt at learning.ipynb
@@ -332,6 +332,47 @@
    },
    "outputs": [],
    "source": [
+    "class LinUCB(algorithm):\n",
+    "    def __init__(self, alpha):\n",
+    "        self.first = True\n",
+    "        self.alpha = alpha\n",
+    "        \n",
+    "    def choice(self, user_features, movies, epoch, s):\n",
+    "        # movies features\n",
+    "        x = movies.apply(get_movie_features, axis=1).as_matrix()\n",
+    "        # number of movies\n",
+    "        m = movies.shape[0]\n",
+    "        # dimension of movie features\n",
+    "        d = x.shape[1]\n",
+    "        # initialize when first time : A is the data and b the user features\n",
+    "        if self.first:\n",
+    "            self.first = False\n",
+    "            self.A = np.zeros((m, d, d))\n",
+    "            for a in range(m):\n",
+    "                self.A[a] = np.eye(d)\n",
+    "            self.b = np.zeros((m, d))\n",
+    "        # get rating for every movie\n",
+    "        ratings = np.zeros(m)\n",
+    "        for a, (title, movie) in enumerate(movies.iterrows()):\n",
+    "            A_inv = np.linalg.inv(self.A[a])\n",
+    "            theta_a = A_inv.dot(self.b[a])\n",
+    "            ratings[a] = theta_a.T.dot(x[a]) + self.alpha * np.sqrt(x[a].T.dot(A_inv).dot(x[a]))\n",
+    "        a_best = ratings.argmax()\n",
+    "        chosen = movies[movies.index == movies.index[a_best]]\n",
+    "        self.A[a_best] += x[a].dot(x[a].T)\n",
+    "        return chosen\n",
+    "            \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def bayes_UCB(user_features, movies, epoch, s):\n",
     "    # Hyperparameters\n",
     "    c0 = 10\n",
@@ -623,8 +664,8 @@
    "outputs": [],
    "source": [
     "# Keep list consistent\n",
-    "ALGOS      = [greedy_choice_no_t_collaborative(), greedy_choice_no_t_contentbased(), random_choice(), greedy_choice_UCB()] #, greedy_choice, random_choice]\n",
-    "ALGOS_NAME = ['greedy_choice_no_t_collaborative', 'greedy_choice_no_t_contentbased', 'random_choice', 'greedy_choice_UCB'] #, 'greedy_choice', 'random_choice']\n",
+    "ALGOS      = [LinUCB(0.5), greedy_choice_no_t_contentbased(), random_choice(), greedy_choice_UCB()] #, greedy_choice, random_choice]\n",
+    "ALGOS_NAME = ['LinUCB', 'greedy_choice_no_t_contentbased', 'random_choice', 'greedy_choice_UCB'] #, 'greedy_choice', 'random_choice']\n",
     "assert(len(ALGOS) == len(ALGOS_NAME))"
    ]
   },
@@ -651,7 +692,7 @@
    },
    "outputs": [],
    "source": [
-    "%time res = rl_multiple_users(users, movies, ALGOS, N=500, N_USER=1, s=200)"
+    "%time res = rl_multiple_users(users, movies, ALGOS, N=500, N_USER=10, s=200)"
    ]
   },
   {
