[fix] some stuff in linUCB (not better yet)

--- a/src/Third attempt at learning.ipynb
+++ b/src/Third attempt at learning.ipynb
@@ -341,10 +341,10 @@
     "        # movies features\n",
     "        x = movies.apply(get_movie_features, axis=1).as_matrix()\n",
     "        # number of movies\n",
-    "        m = movies.shape[0]\n",
+    "        m = x.shape[0]\n",
     "        # dimension of movie features\n",
     "        d = x.shape[1]\n",
-    "        # initialize when first time : A is the data and b the user features\n",
+    "        # initialize when first time\n",
     "        if self.first:\n",
     "            self.first = False\n",
     "            self.A = np.zeros((m, d, d))\n",
@@ -357,10 +357,17 @@
     "            A_inv = np.linalg.inv(self.A[a])\n",
     "            theta_a = A_inv.dot(self.b[a])\n",
     "            ratings[a] = theta_a.T.dot(x[a]) + self.alpha * np.sqrt(x[a].T.dot(A_inv).dot(x[a]))\n",
-    "        a_best = ratings.argmax()\n",
-    "        chosen = movies[movies.index == movies.index[a_best]]\n",
-    "        self.A[a_best] += x[a].dot(x[a].T)\n",
+    "        self.recomm = ratings.argmax()\n",
+    "        chosen = movies[movies.index == movies.index[self.recomm]]\n",
+    "        self.A[self.recomm] += x[self.recomm].dot(x[self.recomm].T)\n",
     "        return chosen\n",
+    "    \n",
+    "    def update_features(self, user_features, movie_features, rating, t):\n",
+    "        self.b[self.recomm] += rating * movie_features\n",
+    "        return super().update_features(user_features, movie_features, rating, t)\n",
+    "    \n",
+    "    def compute_utility(self, user_features, movie_features, epoch, s):\n",
+    "        return user_features.dot(movie_features)\n",
     "            \n",
     "            "
    ]
@@ -581,6 +588,7 @@
     "def reinforcement_learning(user, moviestc, algorithm, s, numberSimulation):\n",
     "    if s<200:\n",
     "        print(\"WARNING : s is really small, movies will get often repeated\")\n",
+    "    algorithm = algorithm()\n",
     "    user_features = np.zeros(moviestc.shape[1] - 2)\n",
     "    movies = moviestc.copy()\n",
     "    movies = movies[movies.columns.difference([\"votes\", \"rating\"])]\n",
@@ -664,8 +672,8 @@
    "outputs": [],
    "source": [
     "# Keep list consistent\n",
-    "ALGOS      = [LinUCB(0.5), greedy_choice_no_t_contentbased(), random_choice(), greedy_choice_UCB()] #, greedy_choice, random_choice]\n",
-    "ALGOS_NAME = ['LinUCB', 'greedy_choice_no_t_contentbased', 'random_choice', 'greedy_choice_UCB'] #, 'greedy_choice', 'random_choice']\n",
+    "ALGOS      = [partial(LinUCB, 0.5), greedy_choice_no_t_contentbased, random_choice] #, greedy_choice, random_choice]\n",
+    "ALGOS_NAME = ['LinUCB', 'greedy_choice_no_t_contentbased', 'random_choice'] #, 'greedy_choice', 'random_choice']\n",
     "assert(len(ALGOS) == len(ALGOS_NAME))"
    ]
   },
@@ -692,7 +700,7 @@
    },
    "outputs": [],
    "source": [
-    "%time res = rl_multiple_users(users, movies, ALGOS, N=500, N_USER=10, s=200)"
+    "%time res = rl_multiple_users(users, movies, ALGOS, N=500, N_USER=5, s=200)"
    ]
   },
   {
